Fix bg-img not covering whole page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,12 +5,19 @@
     padding: 0;
     border: none;
 }
+html {
+    background-image: url('../images/waves.jpg');
+    background-position:center;
+    background-repeat: no-repeat;
+    background-size: cover; 
+    height: 100%;
+    width: 100%;
+}
 
 body {
     margin: auto;
     font-family: Lato, sans-serif;
     color: #53423C;
-    background-color: white;
 }
 
 main {
@@ -86,16 +93,6 @@ nav {
 
 .active {
     border-bottom: #53423C 2px solid;
-}
-
-/* Background image */
-.bg-img {
-    height: 100%;
-    width: 100%;
-    background-image: url('../images/waves.jpg');
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
 }
 
 /*Logo container under nav bar */
